--- a/SeleniumEnero2023/test-output/old/Default suite/reporter-output.html
+++ b/SeleniumEnero2023/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,4 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Launching... http://opencart.abstracta.us/index.php?route=common/home</td></tr>
+<tr><td>Try acces Menu Software</td></tr>
+<tr><td>Try acces Home</td></tr>
+</table>
