--- a/SeleniumEnero2023/test-output/old/Default suite/methods-alphabetical.html
+++ b/SeleniumEnero2023/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cbb08c">  <td>23/01/14 11:51:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTest.f()[pri:0, instance:com.google.qa.FirstTest@59cba5a]">f</td> 
-  <td>main@1375394559</td>   <td></td> </tr>
+<tr bgcolor="8dada8">  <td>23/02/25 13:18:39</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TesCaseStore.afterTest()[pri:0, instance:com.ActividadSelenium.TesCaseStore@74a6f9c1]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2049051802</td>   <td></td> </tr>
+<tr bgcolor="8dada8">  <td>23/02/25 13:18:30</td>   <td>-9234</td> <td>&nbsp;</td><td title="&gt;&gt;TesCaseStore.beforeTest()[pri:0, instance:com.ActividadSelenium.TesCaseStore@74a6f9c1]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2049051802</td>   <td></td> </tr>
+<tr bgcolor="8dada8">  <td>23/02/25 13:18:32</td>   <td>-7268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesCaseStore.f()[pri:0, instance:com.ActividadSelenium.TesCaseStore@74a6f9c1]">f</td> 
+  <td>main@2049051802</td>   <td></td> </tr>
 </table>
